ViewMeme activity will now run in a 2.2 emulator; an error apparently occurs with title bars (only in 2.2), where Dalvik throws a NPE trying to find some random file 'title_bar_shadow.9.png'.  This issue was resolved through adding an 'AppTheme' style in the styles xml, where a notitlebar attribute is specified

--- a/meme_gen_android/res/layout/activity_create_meme.xml
+++ b/meme_gen_android/res/layout/activity_create_meme.xml
@@ -111,7 +111,7 @@
             android:layout_weight="1" >
 
             <include
-                android:id="meme_create_meme_view"
+                android:id="@+id/meme_create_meme_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 layout="@layout/meme_view" />
