--- a/meme_gen_android/res/layout/meme_view.xml
+++ b/meme_gen_android/res/layout/meme_view.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
-
+
     <RelativeLayout
         android:id="@+id/meme_view_rel_layout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
-
+
         <LinearLayout
             android:id="@+id/meme_view_image_linear_layout"
             android:layout_width="fill_parent"
@@ -15,36 +15,30 @@
             android:layout_centerVertical="false"
             android:layout_marginLeft="@dimen/zero_dip"
             android:orientation="vertical" >
-
+
             <ImageView
                 android:id="@+id/image_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_gravity="center_horizontal"
                 android:adjustViewBounds="false"
                 android:scaleType="fitCenter"
                 android:src="@drawable/tmimitw" />
 
         </LinearLayout>
-
+
         <TextView
             android:id="@+id/top_text_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="false"
-            android:layout_centerHorizontal="true"
-            android:layout_toLeftOf="@id/image_view"
+            android:layout_weight="1"
             android:text="I don&apos;t always deploy my code without testing..." />
-
+
         <TextView
             android:id="@+id/bottom_text_textview"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginTop="59dp"
-            android:layout_toLeftOf="@id/image_view"
             android:text="but when I do, it&apos;s in production." />
-
     </RelativeLayout>
 
 </merge>
