--- a/meme_gen_android/res/values/styles.xml
+++ b/meme_gen_android/res/values/styles.xml
@@ -1,5 +1,7 @@
 <resources>
 
-    <style name="AppTheme" parent="android:Theme.Light" />
+    <style name="AppTheme" parent="android:Theme.NoTitleBar">
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
 
 </resources>
