--- a/meme_gen_android/res/layout/meme_view.xml
+++ b/meme_gen_android/res/layout/meme_view.xml
@@ -6,23 +6,22 @@
         android:id="@+id/meme_view_rel_layout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
-
+
         <LinearLayout
             android:id="@+id/meme_view_image_linear_layout"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_alignParentBottom="false"
-            android:layout_centerVertical="false"
             android:layout_marginLeft="@dimen/zero_dip"
             android:orientation="vertical" >
-
+
             <ImageView
                 android:id="@+id/image_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:adjustViewBounds="false"
-                android:scaleType="fitCenter"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:adjustViewBounds="true"
+                android:scaleType="fitStart"
                 android:src="@drawable/tmimitw" />
 
         </LinearLayout>
