--- a/meme_gen_android/res/layout/meme_view.xml
+++ b/meme_gen_android/res/layout/meme_view.xml
@@ -6,38 +6,42 @@
         android:id="@+id/meme_view_rel_layout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
+
+        <ImageView
+            android:id="@+id/image_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:adjustViewBounds="true"
+            android:scaleType="fitStart"
+            android:src="@drawable/tmimitw" />
 
-        <LinearLayout
-            android:id="@+id/meme_view_image_linear_layout"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_alignParentBottom="false"
-            android:layout_marginLeft="@dimen/zero_dip"
-            android:orientation="vertical" >
-
-            <ImageView
-                android:id="@+id/image_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:adjustViewBounds="true"
-                android:scaleType="fitStart"
-                android:src="@drawable/tmimitw" />
-
-        </LinearLayout>
-
         <TextView
             android:id="@+id/top_text_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/image_view"
+            android:layout_alignRight="@id/image_view"
+            android:layout_alignTop="@id/image_view"
             android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:paddingLeft="@dimen/text_padding"
+            android:paddingRight="@dimen/text_padding"
             android:text="I don&apos;t always deploy my code without testing..." />
-
+
         <TextView
             android:id="@+id/bottom_text_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/image_view"
+            android:layout_alignLeft="@id/image_view"
+            android:layout_alignRight="@id/image_view"
+            android:gravity="center_horizontal"
+            android:paddingLeft="@dimen/text_padding"
+            android:paddingRight="@dimen/text_padding"
             android:text="but when I do, it&apos;s in production." />
+
     </RelativeLayout>
 
 </merge>
