--- a/meme_gen_android/res/values/dimens.xml
+++ b/meme_gen_android/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="zero_dip">0dip</dimen>
+    <dimen name="text_padding">15dip</dimen>
 </resources>
