meme view now sizes appropriately

--- a/meme_gen_android/res/layout/meme_view_layout.xml
+++ b/meme_gen_android/res/layout/meme_view_layout.xml
@@ -6,15 +6,15 @@
         android:id="@+id/meme_view_rel_layout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
-
-        <ImageView
+
+        <com.eastapps.meme_gen_android.widgets.ResizableImageView
             android:id="@+id/image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
+            android:scaleType="fitXY"
             android:src="@drawable/tmimitw" />
 
         <com.eastapps.meme_gen_android.widgets.OutlineTextView
