--- a/meme_gen_android/res/layout/create_meme_layout.xml
+++ b/meme_gen_android/res/layout/create_meme_layout.xml
@@ -78,18 +78,33 @@
 
     </LinearLayout>
 
+<!--     <RelativeLayout -->
+<!--         android:id="@+id/image_relative_layout" -->
+<!--         android:layout_width="fill_parent" -->
+<!--         android:layout_height="55dp" -->
+<!--         android:layout_gravity="top" -->
+<!--         android:layout_weight="1" > -->
+
+<!--         <include -->
+<!--             android:id="@+id/meme_create_meme_view" -->
+<!--             android:layout_width="wrap_content" -->
+<!--             android:layout_height="wrap_content" -->
+<!--             layout="@layout/meme_view_layout" /> -->
+<!--     </RelativeLayout> -->
+
     <RelativeLayout
         android:id="@+id/image_relative_layout"
         android:layout_width="fill_parent"
         android:layout_height="55dp"
         android:layout_gravity="top"
         android:layout_weight="1" >
-
-        <include
-            android:id="@+id/meme_create_meme_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            layout="@layout/meme_view_layout" />
+        
+        <android.support.v4.view.ViewPager
+            android:id="@+id/meme_view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+        />
+        
     </RelativeLayout>
 
 </LinearLayout>
