sample swiping and text editing is working.  working on enabling text sizing as well

--- a/meme_gen_android/res/layout/meme_view_layout.xml
+++ b/meme_gen_android/res/layout/meme_view_layout.xml
@@ -5,6 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
+    
     <com.eastapps.meme_gen_android.widget.ResizableImageView
         android:id="@+id/image_view"
         android:layout_width="fill_parent"
@@ -13,10 +14,37 @@
         android:layout_centerVertical="true"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:src="@drawable/tmimitw" />
-
-    <com.eastapps.meme_gen_android.widget.OutlineTextView
-        android:id="@+id/top_text_textview"
+        android:src="@drawable/config_icon" />
+    
+    <!-- <TextView -->
+    <com.eastapps.meme_gen_android.widget.OutlineTextView 
+        android:id="@+id/top_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/image_view"
+        android:layout_alignRight="@id/image_view"
+        android:layout_alignTop="@id/image_view"
+        android:gravity="center_horizontal"
+        android:paddingLeft="@dimen/text_padding"
+        android:paddingRight="@dimen/text_padding"
+        android:shadowRadius="7"/>
+    
+    <!-- <TextView -->
+   <com.eastapps.meme_gen_android.widget.OutlineTextView 
+        android:id="@+id/bottom_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/image_view"
+        android:layout_alignLeft="@id/image_view"
+        android:layout_alignRight="@id/image_view"
+        android:gravity="center_horizontal"
+        android:paddingLeft="@dimen/text_padding"
+        android:paddingRight="@dimen/text_padding"
+        android:shadowRadius="7"/>
+    
+   <!--  <fragment 
+        android:name="com.eastapps.meme_gen_android.widget.fragment.MemeTextFragment"
+        android:id="@+id/top_text_fragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/image_view"
@@ -26,10 +54,11 @@
         android:paddingLeft="@dimen/text_padding"
         android:paddingRight="@dimen/text_padding"
         android:shadowRadius="7"
-        android:text="DUMMY TOP TEXT" />
+        android:text="DUMMY TOP TEXT" /> -->
 
-    <com.eastapps.meme_gen_android.widget.OutlineTextView
-        android:id="@+id/bottom_text_textview"
+<!--     <fragment
+        android:name="com.eastapps.meme_gen_android.widget.fragment.MemeTextFragment"
+        android:id="@+id/bottom_text_fragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/image_view"
@@ -39,6 +68,6 @@
         android:paddingLeft="@dimen/text_padding"
         android:paddingRight="@dimen/text_padding"
         android:shadowRadius="7"
-        android:text="DUMMY BOTTOM TEXT" />
+        android:text="DUMMY BOTTOM TEXT" /> -->
 
 </RelativeLayout>
