--- a/meme_gen_android/res/layout/meme_list_filter_bar_layout.xml
+++ b/meme_gen_android/res/layout/meme_list_filter_bar_layout.xml
@@ -21,7 +21,7 @@
         android:text="@string/filter_bar_btn_txt_all" />
 
     <ImageButton
-        android:id="@+id/imageButton1"
+        android:id="@+id/fav_btn"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_weight="1"
@@ -29,7 +29,7 @@
         android:src="@drawable/icon_heart" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/search_btn"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_weight="1"
