--- a/meme_gen_android/res/layout/create_meme_layout.xml
+++ b/meme_gen_android/res/layout/create_meme_layout.xml
@@ -106,5 +106,12 @@
         />
         
     </RelativeLayout>
+    
+        <com.mobclix.android.sdk.MobclixMMABannerXLAdView
+        android:id="@+id/create_view_advertising_banner_view"
+        android:layout_width="320dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:tag="adspace" />
 
 </LinearLayout>
