--- a/meme_gen_android/res/layout/meme_list_item_layout.xml
+++ b/meme_gen_android/res/layout/meme_list_item_layout.xml
@@ -1,38 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal" >
+    android:layout_height="50dp"
+    android:gravity="top"
+    android:orientation="horizontal" 
+    android:maxHeight="50dp" >
 
     <ImageButton
         android:id="@+id/list_item_heart_img_btn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:minWidth="165dp"
-        android:src="@drawable/icon_heart" 
         android:background="@null"
-        android:contentDescription="TODO"/>
+        android:contentDescription="@string/favorite_button_content_descr"
+        android:minWidth="60dp"
+        android:maxWidth="165dp"
+        android:src="@drawable/icon_heart" />
 
     <com.eastapps.meme_gen_android.widget.ResizableImageView
         android:id="@+id/list_item_thumb_img_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_gravity="center_vertical"
-        android:layout_weight="2.5"
         android:scaleType="fitStart"
         android:src="@drawable/config_icon" />
 
     <TextView
         android:id="@+id/list_item_text_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_gravity="center_vertical"
-        android:layout_weight="1"
         android:minWidth="300dp"
-        android:textSize="16sp"
+        android:text="@string/empty_string"
         android:textColor="@android:color/white"
-        android:text="dummy text" />
+        android:textSize="@dimen/meme_list_descr_font_size" />
 
 </LinearLayout>
