--- a/meme_gen_android/res/layout/meme_list_filter_bar_layout.xml
+++ b/meme_gen_android/res/layout/meme_list_filter_bar_layout.xml
@@ -26,7 +26,7 @@
         android:layout_height="fill_parent"
         android:layout_weight="1"
         android:contentDescription="@string/icon_heart_cont_descr"
-        android:src="@drawable/icon_heart" />
+        android:src="@drawable/fav_icon_v2" />
 
     <ImageButton
         android:id="@+id/search_btn"
